--- a/WebApiDemoCommon/WebApiDemoCommon.csproj
+++ b/WebApiDemoCommon/WebApiDemoCommon.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExampleClass.cs" />
     <Compile Include="InMemoryCameraRepo.cs" />
     <Compile Include="Models\Camera.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
