--- a/WebApiDemo/WebApiDemo.csproj
+++ b/WebApiDemo/WebApiDemo.csproj
@@ -165,6 +165,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ApiDemoController.cs" />
+    <Compile Include="Controllers\AsyncDemoController.cs" />
     <Compile Include="Controllers\CameraController.cs" />
     <Compile Include="Controllers\MvcDemoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
